// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`knowledge preset (v3 behaviour, locked) > empty tables 1`] = `
{
  "links": [],
  "nodes": [
    {
      "colorKey": null,
      "degree": 0,
      "depth": 0,
      "id": "base",
      "kind": "base",
      "label": "knowledge_core",
      "parentId": null,
      "recordId": null,
      "tableId": null,
    },
  ],
  "stats": {
    "cyclesDropped": 0,
    "danglingLinks": 0,
    "groupOrphans": 0,
    "linkCount": 0,
    "nodeCount": 1,
    "perTable": [
      {
        "emitted": 0,
        "tableId": "tblType",
        "truncated": false,
      },
      {
        "emitted": 0,
        "tableId": "tblKnowledge",
        "truncated": false,
      },
    ],
    "truncated": {
      "links": false,
      "nodes": false,
    },
  },
}
`;

exports[`knowledge preset (v3 behaviour, locked) > flat taxonomy with classified and unclassified knowledge 1`] = `
{
  "links": [
    {
      "fieldId": null,
      "kind": "hub",
      "source": "base",
      "target": "rec:t1",
    },
    {
      "fieldId": null,
      "kind": "hub",
      "source": "base",
      "target": "rec:t2",
    },
    {
      "fieldId": null,
      "kind": "hub",
      "source": "base",
      "target": "grp:fldKnType:__none__",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "grp:fldKnType:__none__",
      "target": "rec:k4",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "rec:t1",
      "target": "rec:k1",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "grp:fldKnType:__none__",
      "target": "rec:k3",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "rec:t2",
      "target": "rec:k2",
    },
  ],
  "nodes": [
    {
      "colorKey": null,
      "degree": 3,
      "depth": 0,
      "id": "base",
      "kind": "base",
      "label": "knowledge_core",
      "parentId": null,
      "recordId": null,
      "tableId": null,
    },
    {
      "colorKey": "rec:t1",
      "degree": 1,
      "depth": 0,
      "id": "rec:t1",
      "kind": "record",
      "label": "Alpha",
      "parentId": "base",
      "recordId": "t1",
      "tableId": "tblType",
    },
    {
      "colorKey": "rec:t2",
      "degree": 1,
      "depth": 0,
      "id": "rec:t2",
      "kind": "record",
      "label": "Beta",
      "parentId": "base",
      "recordId": "t2",
      "tableId": "tblType",
    },
    {
      "colorKey": "grp:fldKnType:__none__",
      "degree": 2,
      "depth": 0,
      "id": "grp:fldKnType:__none__",
      "kind": "group",
      "label": "Unclassified",
      "parentId": "base",
      "recordId": null,
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "grp:fldKnType:__none__",
      "degree": 1,
      "depth": 1,
      "id": "rec:k4",
      "kind": "record",
      "label": "Four",
      "parentId": "grp:fldKnType:__none__",
      "recordId": "k4",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "rec:t1",
      "degree": 1,
      "depth": 1,
      "id": "rec:k1",
      "kind": "record",
      "label": "One",
      "parentId": "rec:t1",
      "recordId": "k1",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "grp:fldKnType:__none__",
      "degree": 1,
      "depth": 1,
      "id": "rec:k3",
      "kind": "record",
      "label": "Three",
      "parentId": "grp:fldKnType:__none__",
      "recordId": "k3",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "rec:t2",
      "degree": 1,
      "depth": 1,
      "id": "rec:k2",
      "kind": "record",
      "label": "Two",
      "parentId": "rec:t2",
      "recordId": "k2",
      "tableId": "tblKnowledge",
    },
  ],
  "stats": {
    "cyclesDropped": 0,
    "danglingLinks": 0,
    "groupOrphans": 2,
    "linkCount": 7,
    "nodeCount": 8,
    "perTable": [
      {
        "emitted": 2,
        "tableId": "tblType",
        "truncated": false,
      },
      {
        "emitted": 4,
        "tableId": "tblKnowledge",
        "truncated": false,
      },
    ],
    "truncated": {
      "links": false,
      "nodes": false,
    },
  },
}
`;

exports[`knowledge preset (v3 behaviour, locked) > knowledge cycles and a parent that does not exist 1`] = `
{
  "links": [
    {
      "fieldId": null,
      "kind": "hub",
      "source": "base",
      "target": "rec:t1",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "rec:t1",
      "target": "rec:k1",
    },
    {
      "fieldId": "fldKnParent",
      "kind": "hierarchy",
      "source": "rec:k1",
      "target": "rec:k2",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "rec:t1",
      "target": "rec:k3",
    },
  ],
  "nodes": [
    {
      "colorKey": null,
      "degree": 1,
      "depth": 0,
      "id": "base",
      "kind": "base",
      "label": "knowledge_core",
      "parentId": null,
      "recordId": null,
      "tableId": null,
    },
    {
      "colorKey": "rec:t1",
      "degree": 2,
      "depth": 0,
      "id": "rec:t1",
      "kind": "record",
      "label": "Root",
      "parentId": "base",
      "recordId": "t1",
      "tableId": "tblType",
    },
    {
      "colorKey": "rec:t1",
      "degree": 2,
      "depth": 1,
      "id": "rec:k1",
      "kind": "record",
      "label": "a",
      "parentId": "rec:t1",
      "recordId": "k1",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "rec:t1",
      "degree": 1,
      "depth": 2,
      "id": "rec:k2",
      "kind": "record",
      "label": "b",
      "parentId": "rec:k1",
      "recordId": "k2",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "rec:t1",
      "degree": 1,
      "depth": 1,
      "id": "rec:k3",
      "kind": "record",
      "label": "c",
      "parentId": "rec:t1",
      "recordId": "k3",
      "tableId": "tblKnowledge",
    },
  ],
  "stats": {
    "cyclesDropped": 1,
    "danglingLinks": 0,
    "groupOrphans": 0,
    "linkCount": 4,
    "nodeCount": 5,
    "perTable": [
      {
        "emitted": 1,
        "tableId": "tblType",
        "truncated": false,
      },
      {
        "emitted": 3,
        "tableId": "tblKnowledge",
        "truncated": false,
      },
    ],
    "truncated": {
      "links": false,
      "nodes": false,
    },
  },
}
`;

exports[`knowledge preset (v3 behaviour, locked) > nested knowledge, including across types and under an unclassified root 1`] = `
{
  "links": [
    {
      "fieldId": null,
      "kind": "hub",
      "source": "base",
      "target": "rec:t2",
    },
    {
      "fieldId": null,
      "kind": "hub",
      "source": "base",
      "target": "rec:t1",
    },
    {
      "fieldId": null,
      "kind": "hub",
      "source": "base",
      "target": "grp:fldKnType:__none__",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "grp:fldKnType:__none__",
      "target": "rec:k4",
    },
    {
      "fieldId": "fldKnParent",
      "kind": "hierarchy",
      "source": "rec:k4",
      "target": "rec:k5",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "rec:t1",
      "target": "rec:k1",
    },
    {
      "fieldId": "fldKnParent",
      "kind": "hierarchy",
      "source": "rec:k1",
      "target": "rec:k2",
    },
    {
      "fieldId": "fldKnParent",
      "kind": "hierarchy",
      "source": "rec:k2",
      "target": "rec:k3",
    },
  ],
  "nodes": [
    {
      "colorKey": null,
      "degree": 3,
      "depth": 0,
      "id": "base",
      "kind": "base",
      "label": "knowledge_core",
      "parentId": null,
      "recordId": null,
      "tableId": null,
    },
    {
      "colorKey": "rec:t2",
      "degree": 0,
      "depth": 0,
      "id": "rec:t2",
      "kind": "record",
      "label": "Other",
      "parentId": "base",
      "recordId": "t2",
      "tableId": "tblType",
    },
    {
      "colorKey": "rec:t1",
      "degree": 1,
      "depth": 0,
      "id": "rec:t1",
      "kind": "record",
      "label": "Root",
      "parentId": "base",
      "recordId": "t1",
      "tableId": "tblType",
    },
    {
      "colorKey": "grp:fldKnType:__none__",
      "degree": 1,
      "depth": 0,
      "id": "grp:fldKnType:__none__",
      "kind": "group",
      "label": "Unclassified",
      "parentId": "base",
      "recordId": null,
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "grp:fldKnType:__none__",
      "degree": 2,
      "depth": 1,
      "id": "rec:k4",
      "kind": "record",
      "label": "Orphan root",
      "parentId": "grp:fldKnType:__none__",
      "recordId": "k4",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "grp:fldKnType:__none__",
      "degree": 1,
      "depth": 2,
      "id": "rec:k5",
      "kind": "record",
      "label": "Under orphan",
      "parentId": "rec:k4",
      "recordId": "k5",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "rec:t1",
      "degree": 2,
      "depth": 1,
      "id": "rec:k1",
      "kind": "record",
      "label": "Parent",
      "parentId": "rec:t1",
      "recordId": "k1",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "rec:t1",
      "degree": 2,
      "depth": 2,
      "id": "rec:k2",
      "kind": "record",
      "label": "Child",
      "parentId": "rec:k1",
      "recordId": "k2",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "rec:t1",
      "degree": 1,
      "depth": 3,
      "id": "rec:k3",
      "kind": "record",
      "label": "Grandchild",
      "parentId": "rec:k2",
      "recordId": "k3",
      "tableId": "tblKnowledge",
    },
  ],
  "stats": {
    "cyclesDropped": 0,
    "danglingLinks": 0,
    "groupOrphans": 1,
    "linkCount": 8,
    "nodeCount": 9,
    "perTable": [
      {
        "emitted": 2,
        "tableId": "tblType",
        "truncated": false,
      },
      {
        "emitted": 5,
        "tableId": "tblKnowledge",
        "truncated": false,
      },
    ],
    "truncated": {
      "links": false,
      "nodes": false,
    },
  },
}
`;

exports[`knowledge preset (v3 behaviour, locked) > nested types with an empty branch 1`] = `
{
  "links": [
    {
      "fieldId": null,
      "kind": "hub",
      "source": "base",
      "target": "rec:t4",
    },
    {
      "fieldId": null,
      "kind": "hub",
      "source": "base",
      "target": "rec:t1",
    },
    {
      "fieldId": "fldParentType",
      "kind": "hierarchy",
      "source": "rec:t1",
      "target": "rec:t2",
    },
    {
      "fieldId": "fldParentType",
      "kind": "hierarchy",
      "source": "rec:t2",
      "target": "rec:t3",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "rec:t3",
      "target": "rec:k1",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "rec:t2",
      "target": "rec:k2",
    },
  ],
  "nodes": [
    {
      "colorKey": null,
      "degree": 2,
      "depth": 0,
      "id": "base",
      "kind": "base",
      "label": "knowledge_core",
      "parentId": null,
      "recordId": null,
      "tableId": null,
    },
    {
      "colorKey": "rec:t4",
      "degree": 0,
      "depth": 0,
      "id": "rec:t4",
      "kind": "record",
      "label": "Empty",
      "parentId": "base",
      "recordId": "t4",
      "tableId": "tblType",
    },
    {
      "colorKey": "rec:t1",
      "degree": 1,
      "depth": 0,
      "id": "rec:t1",
      "kind": "record",
      "label": "Root",
      "parentId": "base",
      "recordId": "t1",
      "tableId": "tblType",
    },
    {
      "colorKey": "rec:t1",
      "degree": 3,
      "depth": 1,
      "id": "rec:t2",
      "kind": "record",
      "label": "Child",
      "parentId": "rec:t1",
      "recordId": "t2",
      "tableId": "tblType",
    },
    {
      "colorKey": "rec:t1",
      "degree": 2,
      "depth": 2,
      "id": "rec:t3",
      "kind": "record",
      "label": "Grandchild",
      "parentId": "rec:t2",
      "recordId": "t3",
      "tableId": "tblType",
    },
    {
      "colorKey": "rec:t1",
      "degree": 1,
      "depth": 3,
      "id": "rec:k1",
      "kind": "record",
      "label": "Leaf",
      "parentId": "rec:t3",
      "recordId": "k1",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "rec:t1",
      "degree": 1,
      "depth": 2,
      "id": "rec:k2",
      "kind": "record",
      "label": "Mid",
      "parentId": "rec:t2",
      "recordId": "k2",
      "tableId": "tblKnowledge",
    },
  ],
  "stats": {
    "cyclesDropped": 0,
    "danglingLinks": 0,
    "groupOrphans": 0,
    "linkCount": 6,
    "nodeCount": 7,
    "perTable": [
      {
        "emitted": 4,
        "tableId": "tblType",
        "truncated": false,
      },
      {
        "emitted": 2,
        "tableId": "tblKnowledge",
        "truncated": false,
      },
    ],
    "truncated": {
      "links": false,
      "nodes": false,
    },
  },
}
`;

exports[`knowledge preset (v3 behaviour, locked) > relations: two-way duplicates, self-relations, dangling targets 1`] = `
{
  "links": [
    {
      "fieldId": null,
      "kind": "hub",
      "source": "base",
      "target": "rec:t1",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "rec:t1",
      "target": "rec:k1",
    },
    {
      "fieldId": "fldKnParent",
      "kind": "hierarchy",
      "source": "rec:k1",
      "target": "rec:k3",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "rec:t1",
      "target": "rec:k2",
    },
    {
      "fieldId": "fldRelated",
      "kind": "link",
      "source": "rec:k1",
      "target": "rec:k2",
    },
    {
      "fieldId": "fldRelated",
      "kind": "link",
      "source": "rec:k2",
      "target": "rec:k3",
    },
  ],
  "nodes": [
    {
      "colorKey": null,
      "degree": 1,
      "depth": 0,
      "id": "base",
      "kind": "base",
      "label": "knowledge_core",
      "parentId": null,
      "recordId": null,
      "tableId": null,
    },
    {
      "colorKey": "rec:t1",
      "degree": 2,
      "depth": 0,
      "id": "rec:t1",
      "kind": "record",
      "label": "Root",
      "parentId": "base",
      "recordId": "t1",
      "tableId": "tblType",
    },
    {
      "colorKey": "rec:t1",
      "degree": 3,
      "depth": 1,
      "id": "rec:k1",
      "kind": "record",
      "label": "a",
      "parentId": "rec:t1",
      "recordId": "k1",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "rec:t1",
      "degree": 2,
      "depth": 2,
      "id": "rec:k3",
      "kind": "record",
      "label": "c",
      "parentId": "rec:k1",
      "recordId": "k3",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "rec:t1",
      "degree": 3,
      "depth": 1,
      "id": "rec:k2",
      "kind": "record",
      "label": "b",
      "parentId": "rec:t1",
      "recordId": "k2",
      "tableId": "tblKnowledge",
    },
  ],
  "stats": {
    "cyclesDropped": 0,
    "danglingLinks": 2,
    "groupOrphans": 0,
    "linkCount": 6,
    "nodeCount": 5,
    "perTable": [
      {
        "emitted": 1,
        "tableId": "tblType",
        "truncated": false,
      },
      {
        "emitted": 3,
        "tableId": "tblKnowledge",
        "truncated": false,
      },
    ],
    "truncated": {
      "links": false,
      "nodes": false,
    },
  },
}
`;

exports[`knowledge preset (v3 behaviour, locked) > type cycles and self-parents 1`] = `
{
  "links": [
    {
      "fieldId": null,
      "kind": "hub",
      "source": "base",
      "target": "rec:t1",
    },
    {
      "fieldId": "fldParentType",
      "kind": "hierarchy",
      "source": "rec:t1",
      "target": "rec:t2",
    },
    {
      "fieldId": null,
      "kind": "hub",
      "source": "base",
      "target": "rec:t3",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "rec:t1",
      "target": "rec:k1",
    },
    {
      "fieldId": "fldKnType",
      "kind": "group",
      "source": "rec:t3",
      "target": "rec:k2",
    },
  ],
  "nodes": [
    {
      "colorKey": null,
      "degree": 2,
      "depth": 0,
      "id": "base",
      "kind": "base",
      "label": "knowledge_core",
      "parentId": null,
      "recordId": null,
      "tableId": null,
    },
    {
      "colorKey": "rec:t1",
      "degree": 2,
      "depth": 0,
      "id": "rec:t1",
      "kind": "record",
      "label": "A",
      "parentId": "base",
      "recordId": "t1",
      "tableId": "tblType",
    },
    {
      "colorKey": "rec:t1",
      "degree": 1,
      "depth": 1,
      "id": "rec:t2",
      "kind": "record",
      "label": "B",
      "parentId": "rec:t1",
      "recordId": "t2",
      "tableId": "tblType",
    },
    {
      "colorKey": "rec:t3",
      "degree": 1,
      "depth": 0,
      "id": "rec:t3",
      "kind": "record",
      "label": "C",
      "parentId": "base",
      "recordId": "t3",
      "tableId": "tblType",
    },
    {
      "colorKey": "rec:t1",
      "degree": 1,
      "depth": 1,
      "id": "rec:k1",
      "kind": "record",
      "label": "x",
      "parentId": "rec:t1",
      "recordId": "k1",
      "tableId": "tblKnowledge",
    },
    {
      "colorKey": "rec:t3",
      "degree": 1,
      "depth": 1,
      "id": "rec:k2",
      "kind": "record",
      "label": "y",
      "parentId": "rec:t3",
      "recordId": "k2",
      "tableId": "tblKnowledge",
    },
  ],
  "stats": {
    "cyclesDropped": 2,
    "danglingLinks": 0,
    "groupOrphans": 0,
    "linkCount": 5,
    "nodeCount": 6,
    "perTable": [
      {
        "emitted": 3,
        "tableId": "tblType",
        "truncated": false,
      },
      {
        "emitted": 2,
        "tableId": "tblKnowledge",
        "truncated": false,
      },
    ],
    "truncated": {
      "links": false,
      "nodes": false,
    },
  },
}
`;
